--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,16 @@
 version: '2'
 services:
-  elasticsearch1:
+  kibana:
+    image: docker.elastic.co/kibana/kibana:5.1.1
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch-master
+    networks:
+      - esnet
+  elasticsearch-master:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.1.1
-    container_name: elasticsearch1
+    container_name: elasticsearch-master
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
@@ -18,9 +26,30 @@ services:
     cap_add:
       - IPC_LOCK
     volumes:
-      - esdata1:/usr/share/elasticsearch/data
+      - elasticsearch-master:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+    networks:
+      - esnet
+  elasticsearch1:
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.1
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "discovery.zen.ping.unicast.hosts=elasticsearch-master"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+      nofile:
+        soft: 65536
+        hard: 65536
+    mem_limit: 1g
+    cap_add:
+      - IPC_LOCK
+    volumes:
+      - esdata1:/usr/share/elasticsearch/data
     networks:
       - esnet
   elasticsearch2:
@@ -29,7 +58,7 @@ services:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.zen.ping.unicast.hosts=elasticsearch1"
+      - "discovery.zen.ping.unicast.hosts=elasticsearch-master"
     ulimits:
       memlock:
         soft: -1
@@ -44,33 +73,12 @@ services:
       - esdata2:/usr/share/elasticsearch/data
     networks:
       - esnet
-  elasticsearch3:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.1.1
-    environment:
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
-      - "discovery.zen.ping.unicast.hosts=elasticsearch1"
-    ulimits:
-      memlock:
-        soft: -1
-        hard: -1
-      nofile:
-        soft: 65536
-        hard: 65536
-    mem_limit: 1g
-    cap_add:
-      - IPC_LOCK
-    volumes:
-      - esdata3:/usr/share/elasticsearch/data
-    networks:
-      - esnet
 volumes:
+  elasticsearch-master:
+    driver: local
   esdata1:
     driver: local
   esdata2:
-    driver: local
-  esdata3:
     driver: local
 networks:
   esnet:
